// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 1`] = `
Array [
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 1,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(5)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 2`] = `
Array [
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "embed": Object {
      "$type": "app.bksy.embed.images#presented",
      "images": Array [
        Object {
          "alt": "tests/image/fixtures/key-landscape-small.jpg",
          "fullsize": "https://pds.public.url/image/wRIUrVZeZYnont3JRoe98oCWf0Lu0F3nvjpmluY3UX8/rs:fill:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          "thumb": "https://pds.public.url/image/0jNI6lTTaZXx7i4Cf1D6uaZcxr9HmPis1N3EoT-m1Xw/rs:fill:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
        },
      ],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bksy.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(2)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "replyCount": 1,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bobby boy here",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(5)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(3)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 3`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "repost": "record(1)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(2)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "repostedBy": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(3)",
        },
      },
      "text": "of course",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 0,
    "embed": Object {
      "$type": "app.bksy.embed.images#presented",
      "images": Array [
        Object {
          "alt": "tests/image/fixtures/key-landscape-small.jpg",
          "fullsize": "https://pds.public.url/image/wRIUrVZeZYnont3JRoe98oCWf0Lu0F3nvjpmluY3UX8/rs:fill:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          "thumb": "https://pds.public.url/image/0jNI6lTTaZXx7i4Cf1D6uaZcxr9HmPis1N3EoT-m1Xw/rs:fill:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
        },
        Object {
          "alt": "tests/image/fixtures/key-portrait-small.jpg",
          "fullsize": "https://pds.public.url/image/nFNFXt5_l4kN8k1Ar8Gb8tfEj8Z0woTMDD3UoX5nNqo/rs:fill:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "thumb": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        },
      ],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bksy.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(5)",
              "mimeType": "image/jpeg",
            },
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "image": Object {
              "cid": "cids(6)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 2,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 4`] = `
Array [
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "repost": "record(1)",
      "upvote": "record(2)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "repostedBy": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
    },
    "upvoteCount": 2,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(0)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "dan here!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches scene feeds with trends. 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "embed": Object {
      "$type": "app.bksy.embed.images#presented",
      "images": Array [
        Object {
          "alt": "tests/image/fixtures/key-landscape-small.jpg",
          "fullsize": "https://pds.public.url/image/wRIUrVZeZYnont3JRoe98oCWf0Lu0F3nvjpmluY3UX8/rs:fill:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          "thumb": "https://pds.public.url/image/0jNI6lTTaZXx7i4Cf1D6uaZcxr9HmPis1N3EoT-m1Xw/rs:fill:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
        },
        Object {
          "alt": "tests/image/fixtures/key-portrait-small.jpg",
          "fullsize": "https://pds.public.url/image/nFNFXt5_l4kN8k1Ar8Gb8tfEj8Z0woTMDD3UoX5nNqo/rs:fill:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "thumb": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        },
      ],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bksy.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(3)",
              "mimeType": "image/jpeg",
            },
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "image": Object {
              "cid": "cids(4)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "trendedBy": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorScene",
        "cid": "cids(2)",
      },
      "did": "user(1)",
      "displayName": "besties",
      "handle": "scene.test",
    },
    "upvoteCount": 2,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(5)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "downvote": "record(2)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "trendedBy": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorScene",
        "cid": "cids(2)",
      },
      "did": "user(1)",
      "displayName": "besties",
      "handle": "scene.test",
    },
    "upvoteCount": 2,
    "uri": "record(1)",
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "upvote": "record(4)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 1,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "downvote": "record(5)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(5)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(6)",
  },
]
`;
